add deployment file, update gitignore and add .production

--- a/chat/templates/base.html
+++ b/chat/templates/base.html
@@ -25,6 +25,9 @@
                 <a class="nav-link" href="{% url 'upload_docs' %}">Upload Docs</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'process_docs' %}">Process Docs</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'send_message' %}">Chat</a>
             </li>
             <li class="nav-item">
